# tesseractOCR

./: .travis.yml  README.md
programs/linux/: CMakeLists.txt  main.cpp
programs/linux/tesseractOCR/: CMakeLists.txt  main.cpp
share/tesseractOCR/scripts/: tesseractOCR.xml
